# AlleNoise

./: LICENSE  README.md
allenoise/: category_mapping.csv  metadata.json
category_classifier/: README.md  prepare_dataset.py  pyproject.toml
category_classifier/abstract_classifier/: dataset.py  encoder.py  model.py
category_classifier/bert_classifier/: project_setting.py  train.py
category_classifier/bert_classifier/config/: callbacks.py  constants.py  defaults.py  infrastructure.py
category_classifier/bert_classifier/data/: dataset.py  run_partition.py  utils.py
category_classifier/bert_classifier/domain_model/: co_teaching.py
category_classifier/bert_classifier/model/: augmenter.py  co_teaching_model.py  encoder.py  loss.py  loss_helpers.py  model.py
category_classifier/bert_classifier/trainer/: trainer.py
category_classifier/category_classifier/abstract_classifier/: dataset.py  encoder.py  model.py
category_classifier/category_classifier/bert_classifier/: project_setting.py  train.py
category_classifier/category_classifier/bert_classifier/config/: callbacks.py  defaults.py  infrastructure.py  metrics.py
category_classifier/category_classifier/bert_classifier/data/: dataset.py  entities.py  run_partition.py  utils.py
category_classifier/category_classifier/bert_classifier/model/: augmenter.py  co_teaching_model.py  encoder.py  loss.py  mixup.py  model.py
category_classifier/category_classifier/bert_classifier/trainer/: trainer.py
category_classifier/category_classifier/utils/: argparse_utils.py  data_utils.py  io_utils.py  py_lighting_utils.py  tokenization_utils.py  utils_constants.py
category_classifier/scripts/: train_gcp.py  train_local.sh
category_classifier/utils/: data_utils.py  py_lighting_utils.py  tokenization_utils.py
noise_generator/api/: noise_generator_main.py
noise_generator/config/noise_generator/: noise_generator_defaults.py
noise_generator/infrastructure/: category_utils.py  dataset_io.py  datetime_utils.py  io_utils.py  logging_utils.py  plot_utils.py
noise_generator/noise_generator/: abstract_noise_generator.py  class_dependent_noise.py  data_model.py  label_transition_transforms.py  noise_generator_facade.py  pyproject.toml
noise_generator/noise_generator/internal/: noise_generator_impl.py
noise_generator/noise_generator/internal/symmetric/: symmetric_noise_generator.py
